--- a/app/src/main/res/drawable/pin_button_bg.xml
+++ b/app/src/main/res/drawable/pin_button_bg.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="#E3F2FD" />
             <stroke android:width="2dp" android:color="#1976D2" />
+            <corners android:radius="12dp" />
         </shape>
     </item>
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="#F5F5F5" />
             <stroke android:width="1dp" android:color="#E0E0E0" />
+            <corners android:radius="12dp" />
         </shape>
     </item>
 </selector>
