--- a/app/src/main/res/layout/fragment_manage_lp.xml
+++ b/app/src/main/res/layout/fragment_manage_lp.xml
@@ -76,7 +76,7 @@
 </ScrollView>
 
 <!-- Loading overlay using reusable component -->
-<com.example.earthwallet.ui.components.LoadingOverlay
+<network.erth.wallet.ui.components.LoadingOverlay
     android:id="@+id/loading_overlay"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
