--- a/app/src/main/res/layout/fragment_swap_tokens_main.xml
+++ b/app/src/main/res/layout/fragment_swap_tokens_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="com.example.earthwallet.ui.fragments.main.SwapTokensMainFragment">
+    tools:context="network.erth.wallet.ui.fragments.main.SwapTokensMainFragment">
 
     <ScrollView
         android:layout_width="match_parent"
