--- a/app/src/main/res/layout/fragment_wallet_main.xml
+++ b/app/src/main/res/layout/fragment_wallet_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="com.example.earthwallet.ui.activities.WalletActivity">
+    tools:context="network.erth.wallet.ui.activities.WalletActivity">
 
     <RelativeLayout
         android:id="@+id/wallet_activity_content"
