--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,7 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">lcd.erth.network</domain>
-        <domain includeSubdomains="true">maroon-spoonbill.vm.scrtlabs.com</domain>
+        <domain includeSubdomains="true">chocolate-worm.vm.scrtlabs.com</domain>
     </domain-config>
     
     <!-- Allow all HTTPS traffic -->
