--- a/app/src/main/res/layout/fragment_scan_failure.xml
+++ b/app/src/main/res/layout/fragment_scan_failure.xml
@@ -56,23 +56,13 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/btn_try_again"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:background="@color/anml_button_background"
-            android:text="Try Again"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
-
-        <Button
             android:id="@+id/btn_back_to_anml"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:text="Back to ANML"
+            android:background="@color/anml_button_background"
+            android:text="Back to Menu"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
