--- a/app/src/main/res/drawable/btn_anml_desktop.xml
+++ b/app/src/main/res/drawable/btn_anml_desktop.xml
@@ -3,8 +3,7 @@
     <!-- Pressed / hover -->
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/sidebar_hover" />
-            <stroke android:width="5dp" android:color="@color/anml_button_border" />
+            <solid android:color="@color/green_hover" />
             <corners android:radius="30dp" />
             <padding android:left="20dp" android:top="5dp" android:right="20dp" android:bottom="5dp" />
             <size android:height="56dp" />
@@ -14,8 +13,7 @@
     <!-- Default -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/sidebar_bg" />
-            <stroke android:width="5dp" android:color="@color/anml_button_border" />
+            <solid android:color="@color/green_primary" />
             <corners android:radius="30dp" />
             <padding android:left="20dp" android:top="5dp" android:right="20dp" android:bottom="5dp" />
             <size android:height="56dp" />
