feat(ui): update button styles and backgrounds for improved consistency

--- a/app/src/main/res/drawable/btn_accent_modern.xml
+++ b/app/src/main/res/drawable/btn_accent_modern.xml
@@ -5,7 +5,7 @@
         <selector>
             <item android:state_pressed="true">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/accent_blue_dark" />
+                    <solid android:color="@color/primary_dark" />
                     <corners android:radius="12dp" />
                 </shape>
             </item>
@@ -17,7 +17,7 @@
             </item>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/accent_blue" />
+                    <solid android:color="@color/primary" />
                     <corners android:radius="12dp" />
                 </shape>
             </item>
