--- a/app/src/main/res/drawable/btn_primary_modern.xml
+++ b/app/src/main/res/drawable/btn_primary_modern.xml
@@ -11,7 +11,7 @@
             </item>
             <item android:state_enabled="false">
                 <shape android:shape="rectangle">
-                    <solid android:color="#A1A1AA" />
+                    <solid android:color="@color/primary" />
                     <corners android:radius="14dp" />
                 </shape>
             </item>
