--- a/app/src/main/res/layout/component_small_action_button.xml
+++ b/app/src/main/res/layout/component_small_action_button.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="32dp"
+    android:layout_height="28dp"
     android:layout_marginStart="8dp"
-    android:background="@drawable/card_rounded_bg"
+    android:background="@drawable/btn_accent_modern"
+    app:backgroundTint="@null"
     android:elevation="0dp"
     android:stateListAnimator="@null"
     android:minWidth="0dp"
     android:minHeight="0dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:paddingTop="2dp"
-    android:paddingBottom="2dp"
-    android:textColor="@android:color/white"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="0dp"
+    android:paddingBottom="0dp"
+    android:textColor="@color/text_inverse"
     android:textSize="12sp"
+    android:textAllCaps="false"
+    android:fontFamily="sans-serif-medium"
     android:visibility="gone" />
