--- a/app/src/main/res/drawable/tab_background.xml
+++ b/app/src/main/res/drawable/tab_background.xml
@@ -3,15 +3,15 @@
     <!-- Selected tab -->
     <item android:state_selected="true">
         <shape>
-            <solid android:color="#4CAF50" />
-            <corners android:radius="10dp" />
+            <solid android:color="@color/primary" />
+            <corners android:radius="12dp" />
         </shape>
     </item>
     <!-- Normal tab -->
     <item>
         <shape>
-            <solid android:color="#F1F0EA" />
-            <corners android:radius="10dp" />
+            <solid android:color="@color/desktop_bg" />
+            <corners android:radius="12dp" />
         </shape>
     </item>
 </selector>
